--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,29 @@
-address==0.1.1
-amqp==2.5.2
-antiorm==1.2.1
+amqp==1.4.9
 anyjson==0.3.3
-appdirs==1.4.3
-attrs==19.3.0
-billiard==3.6.1.0
-black==19.10b0
-celery==4.4.0
-Click==7.0
-db==0.1.1
-dj-database-url==0.5.0
-Django==2.2.7
-django-heroku==0.3.1
-django-rest-auth==0.9.5
-django-service-objects==0.5.0
-djangorestframework==3.10.3
-entrypoints==0.3
-flake8==3.7.9
-Flask==1.1.1
-gunicorn==20.0.4
-importlib-metadata==1.3.0
-isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.10.3
-kombu==4.6.7
-MarkupSafe==1.1.1
-mccabe==0.6.1
-more-itertools==8.0.2
-MyApplication==0.1.0
-pathspec==0.6.0
-psycopg2==2.8.4
-pycodestyle==2.5.0
-pyflakes==2.1.1
+asn1crypto==0.24.0
+billiard==3.3.0.23
+celery==3.1.26.post2
+cryptography==2.1.4
+Django==1.11.27
+django-celery==3.3.1
+django-crispy-forms==1.8.1
+django-filter==2.0.0
+django-mathfilters==0.4.0
+django-service-objects==0.6.0
+djangorestframework==3.9.4
+enum34==1.1.6
+gyp==0.1
+idna==2.6
+ipaddress==1.0.17
+keyring==10.6.0
+keyrings.alt==3.0
+kombu==3.0.37
+psycopg2==2.7.4
+pycrypto==2.6.1
+pygobject==3.26.1
+python-dateutil==2.8.1
 pytz==2019.3
-regex==2019.12.9
-six==1.13.0
-sqlparse==0.3.0
-toml==0.10.0
-typed-ast==1.4.0
-vine==1.3.0
-Werkzeug==0.16.0
-whitenoise==5.0.1
-amqp==2.5.2
-billiard==3.6.1.0
-celery==4.4.0
-Django==2.2.7
-django-rest-auth==0.9.5
-django-service-objects==0.5.0
-djangorestframework==3.11.0
-importlib-metadata==1.3.0
-kombu==4.6.7
-more-itertools==8.0.2
-pkg-resources==0.0.0
-pytz==2019.3
-six==1.13.0
-sqlparse==0.3.0
-vine==1.3.0
-zipp==0.6.0
+pyxdg==0.25
+SecretStorage==2.3.1
+six==1.14.0
+sqlparse==0.2.4
